--- a/index.html
+++ b/index.html
@@ -1,24 +1,225 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/99ac2dd297.js" crossorigin="anonymous"></script>
     <title>John Hopkins</title>
   </head>
   <body>
-    <div class="container">
-        <h1>John Hopkins</h1>
+    <!-- header -->
+    <header>
+      <div class="main-container container-fluid">
+          <nav class="navbar navbar-light">
+            <a class="navbar-brand" href="index.html"><img src="assets/imgs/ach-logo_1.webp" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+      </div>
+      <div class="color-bar">
+        <ul>
+          <li class="orange"></li>
+          <li class="dark-pink"></li>
+          <li class="green"></li>
+          <li class="sky-blue"></li>
+          <li class="red"></li>
+          <li class="pink"></li>
+          <li class="yellow"></li>
+          <li class="sky-blue"></li>
+        </ul>
+      </div>
+    </header>
+    <!-- header end -->
+    <!-- hero -->
+    <div class="home-hero">
+      <img src="assets/imgs/home-hero.jpg" />
+      <div class="hero-bottom-container">
+        <div class="main-container container-fluid">
+          <i class="fas fa-home"></i> <a href="#">Healthy Lifestyle Homepage</a>
+        </div>
+      </div>
     </div>
+    <!-- hero end -->
+    <!-- main content -->
+    <main class="middle-section">
+      <div class="main-container container-fluid">
+        <div class="row">
+          <div class="col-lg-2"></div>
+          <div class="col-lg-10">
+            <h3 class="jh-title ml-n3">Pillars to a Healthy Lifestyle</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-lg-3 col-squares">
+              <div class="square-pink"></div>
+              <div class="square-yellow"></div>
+              <div class="square-blue"></div>
+          </div>
+          <div class="col-sm-12 col-lg-8">
+            <h6 class="mt-3 mb-3">Introduction to the Four Pillars</h6>
+            <p>Making a change for a healthier lifestyle can seem like a daunting task for many families, but with the right support system it doesn’t have to be. Small changes in the daily routine can help families manage their busy lives while being more health conscious.</p>
+            <p>At Johns Hopkins All Children’s Hospital, we like the concept of building a healthy lifestyle “home” with the right “pillars” to support a healthy lifestyle. Each of the four pillars has to be in place to keep your house healthy.</p>
+            <p>When a person struggles in one of these areas it affects the balance of the whole body. A good guide to think about is 9-5-2-1-0. Every day we all need to aim for nine hours of sleep, ﬁve servings of vegetables and fruit, less than two hours of screen time, at least one hour of physical activity and no sugar-sweetened drinks. Maintaining balance in these areas helps everyone be their best.</p>
+            <p><a class="btn pt-3 pb-3 pl-5 pr-5 jh-btn" href="#">LEARN MORE >></a></p>
+          </div>
+        </div>
+      </div>
 
-    <!-- Optional JavaScript -->
+      <div class="main-container container-fluid">
+        <div class="row d-flex mx-auto center-content flex-column">
+          <div class="heading-banner text-white">Age Group Language</div>
+          <h6>Age Group or Selection language:</h6>
+          <p>Instructions. Filler Language. Making small changes can seem like a daunting task for many families, but with the right support system it doesn’t have to be. </p>
+            
+          <div class="card mx-auto mb-3 mt-3 jh-card">
+            <div class="row no-gutters">
+              <div class="col-lg-3 jh-card-age bg-yellow d-flex">
+                <h3 class="font-weight-normal">Under</h3>
+                <p class="mb-0 h1">2</p>
+              </div>
+              <div class="col-lg-9">
+                <div class="card-body p-5 jh-card-body d-flex">
+                    <a class="font-weight-normal" href="newborns-infants-toddlers.html">Newborns, Infants, and Toddlers:<br>Ages 0 to 2</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mx-auto mb-3 jh-card">
+            <div class="row no-gutters">
+              <div class="col-lg-3 jh-card-age bg-skyblue d-flex">
+                <p class="mb-0 h1">2-4</p>
+              </div>
+              <div class="col-lg-9">
+                <div class="card-body p-5 jh-card-body d-flex">
+                    <a class="font-weight-normal" href="#">Preschool:<br>Ages 2 to 4</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mx-auto mb-3 jh-card">
+            <div class="row no-gutters">
+              <div class="col-lg-3 jh-card-age bg-orange d-flex">
+                <p class="mb-0 h1">5-9</p>
+              </div>
+              <div class="col-lg-9">
+                <div class="card-body p-5 jh-card-body d-flex">
+                    <a class="font-weight-normal" href="#">Early Childhood:<br>Ages 5 to 9</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mx-auto mb-3 jh-card">
+            <div class="row no-gutters">
+              <div class="col-lg-3 jh-card-age bg-pink d-flex">
+                <p class="mb-0 h1">10-14</p>
+              </div>
+              <div class="col-lg-9">
+                <div class="card-body p-5 jh-card-body d-flex">
+                    <a class="font-weight-normal" href="#">Pre-Adolescence:<br>Ages 10 to 14</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mx-auto mb-3 jh-card">
+            <div class="row no-gutters">
+              <div class="col-lg-3 jh-card-age bg-green d-flex">
+                <p class="mb-0 h1">15-18</p>
+              </div>
+              <div class="col-lg-9">
+                <div class="card-body p-5 jh-card-body d-flex">
+                    <a class="font-weight-normal" href="#">Adolescence:<br>Ages 15 to 18</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 mt-5 pt-5 text-center mx-auto">
+            <h3 class="jh-title">Download the Healthy Lifestyle Toolkit</h3>
+            <div class="col-lg-6 mt-3 mx-auto">
+            <p>Language explaining the complete toolkit download. Filler language In today’s food environment it can often be easier to find unhealthy foods than healthy foods</p>
+            <p class="mt-4"><a class="btn pt-3 pb-3 pl-5 pr-5 jh-btn" href="#">Download the PDF >></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- main content end -->
+    <!-- footer -->
+    <footer>
+      <div class="color-bar">
+        <ul>
+          <li class="orange"></li>
+          <li class="dark-pink"></li>
+          <li class="green"></li>
+          <li class="sky-blue"></li>
+          <li class="red"></li>
+          <li class="pink"></li>
+          <li class="yellow"></li>
+          <li class="sky-blue"></li>
+        </ul>
+      </div>
+      <div class="main-container container-fluid">
+        <div class="row">
+          <div class="col-md footer-logo-col">
+            <img class="footer-logo float-left" src="assets/imgs/footer-logo.png" />
+            <div>
+              <p>501 6th Avenue South St. Petersburg, FL 33701</p>
+              <p>P: 727-898-7451 Toll Free 800-456-4543</p>
+              <p>E: achinfo@jhmi.edu</p>
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-instagram-square"></i>
+              <i class="fab fa-linkedin"></i>
+              <i class="fab fa-pinterest-square"></i>
+              <i class="fab fa-twitter-square"></i>
+            </div>
+          </div>
+          <div class="col-md text-right text-white">
+            <p><a href="#">Make Appointment</a></p>
+            <p><a href="#">Refer a Patient</a></p>
+            <p><a href="#">Make a Gift</a></p>
+            <p><a href="#">Join Our Team</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="main-container container-fluid text-center">
+          &copy; <span id="footerDate"></span> John Hopkins All Childrens Hospital. All rights reserved.
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+   
+    <script>
+      let footerDate = document.getElementById('footerDate');
+      let d = new Date().getFullYear();
+      footerDate.innerText = d;
+    </script>
   </body>
 </html>
