--- a/under-2-assessments.html
+++ b/under-2-assessments.html
@@ -59,103 +59,36 @@
     <!-- hero end -->
     <!-- main content -->
     <main class="middle-section">
-      <div class="main-container container-fluid">
-        <div class="row">
-          <div class="col-lg-2"></div>
-          <div class="col-lg-10">
-            <h3 class="jh-title ml-n3">Pillars to a Healthy Lifestyle</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12 col-lg-3 col-squares">
-              <div class="square-pink"></div>
-              <div class="square-yellow"></div>
-              <div class="square-blue"></div>
-          </div>
-          <div class="col-sm-12 col-lg-8">
-            <h6 class="mt-3 mb-3">Introduction to the Four Pillars</h6>
-            <p>With the right support system in place, adopting a healthier family lifestyle can be achievable for both children and parents. At Johns Hopkins All Children’s Hospital, we believe healthy lives are built on four pillars of support: Diet, Exercise, Sleep, and Behavioral Health. </p>
-            <ol class="jh-num-list pl-3" type="1">
-              <li><strong>Diet:</strong> It can be a challenge to eat right when surrounded by processed, high-calorie foods, high-sugar beverages, and super-size portions. It is no surprise that more children battle weight gain, obesity, and other health issues. Yet, adopting healthier eating habits can help, such as choosing more whole foods and healthy snacks and learning how to manage meal sizes. </li>
-              <li><strong>Exercise:</strong> An active body is a healthy body. Regular exercise can help manage weight, boost mood, and improve sleep. Guidelines suggest at least 60 minutes per day of moderate-to-vigorous activity for optimal health. Activities that children enjoy makes it easier for them to get moving and stay moving.</li>
-              <li><strong>Sleep:</strong> Without adequate sleep, people are more likely to overeat and exercise less. They also have a higher risk of depression and have trouble with concentration. For children, poor sleep also can affect academic performance. Following lifestyle habits, such as watching caffeine intake, managing electronic screen time, and keeping a regular sleep schedule, can help everyone get the sleep they need.</li>
-              <li><strong>Behavioral Health:</strong> Mood and mental health is an often overlooked but crucial part of overall health. Understanding how to manage children’s anxieties, fears, and other emotions provide the additional support they need to maintain a healthy diet, proper exercise, and adequate sleep.</li>
-            </ol>
-          </div>
-        </div>
-      </div>
 
       <div class="main-container container-fluid">
-        <div class="row d-flex mx-auto center-content flex-column">
-          <div class="heading-banner text-white">Age Group Language</div>
-          <h6>Age Group or Selection language:</h6>
-          <p>Instructions. Filler Language. Making small changes can seem like a daunting task for many families, but with the right support system it doesn’t have to be. </p>
-            
-          <div class="card mx-auto mb-3 mt-3 jh-card">
-            <div class="row no-gutters">
-              <div class="col-lg-3 jh-card-age bg-yellow d-flex">
-                <h3 class="font-weight-normal">Under</h3>
-                <p class="mb-0 h1">2</p>
-              </div>
-              <div class="col-lg-9">
-                <div class="card-body p-5 jh-card-body d-flex">
-                    <a class="font-weight-normal" href="newborns-infants-toddlers.html">Newborns, Infants, and Toddlers:<br>Ages 0 to 2</a>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="row d-flex mx-auto center-content center-content-internal assessment-row flex-column">
+          <div class="heading-banner text-white">Assessments</div>
+          <h6 class="pt-2">Adverse Childhood Experiences (ACEs)</h6>
+            <a class="ml-4" href="assets/pdf/Assessments.pdf" target="_blank">View the ACEs Assesment</a>
 
-          <div class="card mx-auto mb-3 jh-card">
-            <div class="row no-gutters">
-              <div class="col-lg-3 jh-card-age bg-skyblue d-flex">
-                <p class="mb-0 h1">2-4</p>
-              </div>
-              <div class="col-lg-9">
-                <div class="card-body p-5 jh-card-body d-flex">
-                    <a class="font-weight-normal" href="#">Preschool:<br>Ages 2 to 4</a>
-                </div>
-              </div>
-            </div>
-          </div>
+            <h6 class="pt-2">BMI</h6>
+            <a class="ml-4" href="#" target="_blank">View the BMI Assesment</a>
 
-          <div class="card mx-auto mb-3 jh-card">
-            <div class="row no-gutters">
-              <div class="col-lg-3 jh-card-age bg-orange d-flex">
-                <p class="mb-0 h1">5-9</p>
-              </div>
-              <div class="col-lg-9">
-                <div class="card-body p-5 jh-card-body d-flex">
-                    <a class="font-weight-normal" href="#">Early Childhood:<br>Ages 5 to 9</a>
-                </div>
-              </div>
-            </div>
-          </div>
+            <h6 class="pt-2">Disordered Eating</h6>
+            <a class="ml-4" href="#" target="_blank">View the Disordered Eating Assesment</a>
 
-          <div class="card mx-auto mb-3 jh-card">
-            <div class="row no-gutters">
-              <div class="col-lg-3 jh-card-age bg-pink d-flex">
-                <p class="mb-0 h1">10-14</p>
-              </div>
-              <div class="col-lg-9">
-                <div class="card-body p-5 jh-card-body d-flex">
-                    <a class="font-weight-normal" href="#">Pre-Adolescence:<br>Ages 10 to 14</a>
-                </div>
-              </div>
-            </div>
-          </div>
+            <h6 class="pt-2">Food Insecurity</h6>
+            <a class="ml-4" href="#" target="_blank">View the Food Insecurity Assesment</a>
 
-          <div class="card mx-auto mb-3 jh-card">
-            <div class="row no-gutters">
-              <div class="col-lg-3 jh-card-age bg-green d-flex">
-                <p class="mb-0 h1">15-18</p>
-              </div>
-              <div class="col-lg-9">
-                <div class="card-body p-5 jh-card-body d-flex">
-                    <a class="font-weight-normal" href="#">Adolescence:<br>Ages 15 to 18</a>
-                </div>
-              </div>
-            </div>
-          </div>
+            <h6 class="pt-2">Lifestyle</h6>
+            <a class="ml-4" href="#" target="_blank">View the Lifestyle Assesment</a>
+
+            <h6 class="pt-2">Self-monitor</h6>
+            <a class="ml-4" href="#" target="_blank">View the Self-monitor Assesment</a>
+
+            <h6 class="pt-2">SMART Goals</h6>
+            <a class="ml-4" href="#" target="_blank">View the SMART Goals Assesment</a>
+
+            <h6 class="pt-2">Tips</h6>
+            <a class="ml-4" href="#" target="_blank">View the Tips Assesment</a>
+
+            <h6 class="pt-2">Weight Bias</h6>
+            <a class="ml-4" href="#" target="_blank">View the Weight Bias Assesment</a>
         </div>
 
         <div class="row">
