--- a/assessments.html
+++ b/assessments.html
@@ -15,8 +15,8 @@
       <div class="main-container container-fluid">
           <nav class="navbar navbar-light">
             <a class="navbar-brand" href="index.html"><img src="assets/imgs/ach-logo_1.webp" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse">
+              <a href="index.html"><span class="navbar-toggler-icon"></span></a>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
@@ -52,7 +52,7 @@
       <img src="assets/imgs/home-hero.jpg" />
       <div class="hero-bottom-container">
         <div class="main-container container-fluid">
-          <i class="fas fa-home"></i> <a href="#">Healthy Lifestyle Homepage</a>
+          <a class="home-bc-link" href="index.html"><i class="fas fa-home"></i></a> <a href="index.html"><span>Healthy Lifestyle Homepage</span></a> <span>Assesments</span>
         </div>
       </div>
     </div>
@@ -64,31 +64,31 @@
         <div class="row d-flex mx-auto center-content center-content-internal assessment-row flex-column">
           <div class="heading-banner text-white">Assessments</div>
           <h6 class="pt-2">Adverse Childhood Experiences (ACEs)</h6>
-            <a class="ml-4" href="assets/pdf/Assessments.pdf" target="_blank">View the ACEs Assesment</a>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.ACEs.pdf" target="_blank">View the ACEs Assesment</a>
 
             <h6 class="pt-2">BMI</h6>
-            <a class="ml-4" href="#" target="_blank">View the BMI Assesment</a>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.BMI.pdf" target="_blank">View the BMI Assesment</a>
 
             <h6 class="pt-2">Disordered Eating</h6>
-            <a class="ml-4" href="#" target="_blank">View the Disordered Eating Assesment</a>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.DEB.pdf" target="_blank">View the Disordered Eating Assesment</a>
 
             <h6 class="pt-2">Food Insecurity</h6>
-            <a class="ml-4" href="#" target="_blank">View the Food Insecurity Assesment</a>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.FI.pdf" target="_blank">View the Food Insecurity Assesment</a>
 
             <h6 class="pt-2">Lifestyle</h6>
-            <a class="ml-4" href="#" target="_blank">View the Lifestyle Assesment</a>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.L.pdf" target="_blank">View the Lifestyle Assesment</a>
 
             <h6 class="pt-2">Self-monitor</h6>
-            <a class="ml-4" href="#" target="_blank">View the Self-monitor Assesment</a>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.SMT.pdf" target="_blank">View the Self-monitor Assesment</a>
 
             <h6 class="pt-2">SMART Goals</h6>
-            <a class="ml-4" href="#" target="_blank">View the SMART Goals Assesment</a>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.SMART.pdf" target="_blank">View the SMART Goals Assesment</a>
 
             <h6 class="pt-2">Tips</h6>
-            <a class="ml-4" href="#" target="_blank">View the Tips Assesment</a>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.TIPS.pdf" target="_blank">View the Tips Assesment</a>
 
             <h6 class="pt-2">Weight Bias</h6>
-            <a class="ml-4" href="#" target="_blank">View the Weight Bias Assesment</a>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.WB.pdf" target="_blank">View the Weight Bias Assesment</a>
         </div>
 
         <div class="row">
