--- a/newborns-infants-toddlers.html
+++ b/newborns-infants-toddlers.html
@@ -15,8 +15,8 @@
       <div class="main-container container-fluid">
           <nav class="navbar navbar-light">
             <a class="navbar-brand" href="index.html"><img src="assets/imgs/ach-logo_1.webp" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse">
+              <a href="index.html"><span class="navbar-toggler-icon"></span></a>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
@@ -52,7 +52,7 @@
       <img src="assets/imgs/home-hero.jpg" />
       <div class="hero-bottom-container">
         <div class="main-container container-fluid">
-          <i class="fas fa-home"></i> <a href="#">Healthy Lifestyle Homepage</a>
+          <a href="index.html"><i class="fas fa-home"></i></a> <a href="index.html"><span>Healthy Lifestyle Homepage</span></a> <span>Newborns, Infants, and Toddlers: Under 2</span>
         </div>
       </div>
     </div>
@@ -80,7 +80,7 @@
           </div>
           <div class="jh-card mx-auto text-center jh-card-internal p-2">
             <div>
-                <a href="under-2-assessments.html">View Under 2 Assessments >></a>
+                <a href="assessments.html">View Assessments >></a>
             </div>
           </div>
 
@@ -379,22 +379,22 @@
             <div class="col-lg mt-3 mr-1 text-center d-flex align-items-center justify-content-center flex-column bg-skyblue">
               <h3 class="font-weight-normal">2-4</h3>
               <p class="mb-0">Ages 2 to 4</p>
-              <a href="#"></a>
+              <a href="preschool.html"></a>
             </div>
             <div class="col-lg mt-3 mr-1 text-center d-flex align-items-center justify-content-center flex-column bg-orange">
                 <h3 class="font-weight-normal">5-9</h3>
                 <p class="mb-0">Ages 5 to 9</p>
-                <a href="#"></a>
+                <a href="early-childhood.html"></a>
             </div>
             <div class="col-lg mt-3 mr-1 text-center d-flex align-items-center justify-content-center flex-column bg-pink">
                 <h3 class="font-weight-normal">10-14</h3>
                 <p class="mb-0">Ages 10 to 14</p>
-                <a href="#"></a>
+                <a href="pre-adolescence.html"></a>
             </div>
             <div class="col-lg mt-3 text-center d-flex align-items-center justify-content-center flex-column bg-green">
                 <h3 class="font-weight-normal">15-18</h3>
               <p class="mb-0">Ages 15 to 18</p>
-              <a href="#"></a>
+              <a href="adolescence.html"></a>
             </div>
           </div>
         </div><!-- /row -->
