--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="main-container container-fluid">
           <nav class="navbar navbar-light">
             <a class="navbar-brand" href="index.html"><img src="assets/imgs/ach-logo_1.webp" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse">
+              <a href="index.html"><span class="navbar-toggler-icon"></span></a>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
@@ -112,7 +112,7 @@
               </div>
               <div class="col-lg-9">
                 <div class="card-body p-5 jh-card-body d-flex">
-                    <a class="font-weight-normal" href="#">Preschool:<br>Ages 2 to 4</a>
+                    <a class="font-weight-normal" href="preschool.html">Preschool:<br>Ages 2 to 4</a>
                 </div>
               </div>
             </div>
@@ -125,7 +125,7 @@
               </div>
               <div class="col-lg-9">
                 <div class="card-body p-5 jh-card-body d-flex">
-                    <a class="font-weight-normal" href="#">Early Childhood:<br>Ages 5 to 9</a>
+                    <a class="font-weight-normal" href="early-childhood.html">Early Childhood:<br>Ages 5 to 9</a>
                 </div>
               </div>
             </div>
@@ -138,7 +138,7 @@
               </div>
               <div class="col-lg-9">
                 <div class="card-body p-5 jh-card-body d-flex">
-                    <a class="font-weight-normal" href="#">Pre-Adolescence:<br>Ages 10 to 14</a>
+                    <a class="font-weight-normal" href="pre-adolescence.html">Pre-Adolescence:<br>Ages 10 to 14</a>
                 </div>
               </div>
             </div>
@@ -151,7 +151,7 @@
               </div>
               <div class="col-lg-9">
                 <div class="card-body p-5 jh-card-body d-flex">
-                    <a class="font-weight-normal" href="#">Adolescence:<br>Ages 15 to 18</a>
+                    <a class="font-weight-normal" href="adolescence.html">Adolescence:<br>Ages 15 to 18</a>
                 </div>
               </div>
             </div>
