--- a/pre-adolescence.html
+++ b/pre-adolescence.html
@@ -382,7 +382,7 @@
             <h3 class="jh-title">Download the Healthy Lifestyle Toolkit</h3>
             <div class="col-lg-6 mt-3 mx-auto">
             <p>Language explaining the complete toolkit download. Filler language In today’s food environment it can often be easier to find unhealthy foods than healthy foods</p>
-            <p class="mt-4"><a class="btn pt-3 pb-3 pl-5 pr-5 jh-btn" href="#">Download the PDF >></a></p>
+            <p class="mt-4"><a class="btn pt-3 pb-3 pl-5 pr-5 jh-btn" href="assets/pdf/HealthyLifestyleToolkit.pdf" target="_blank">Download the PDF >></a></p>
             </div>
           </div>
         </div>
