--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
         <div class="row d-flex mx-auto center-content flex-column">
           <div class="heading-banner text-white">Age Group Language</div>
           <h6>Age Group or Selection language:</h6>
-          <p>Instructions. Filler Language. Making small changes can seem like a daunting task for many families, but with the right support system it doesn’t have to be. </p>
-            
+          <p>The Toolkit is divided into five age categories and covers children from newborns through the teenage years. Each of the Four Pillars is highlighted within each age group and customized to meet the specific needs and goals for those aged children.</p>
           <div class="card mx-auto mb-3 mt-3 jh-card">
             <div class="row no-gutters">
               <div class="col-lg-3 jh-card-age bg-yellow d-flex">
