--- a/newborns-infants-toddlers.html
+++ b/newborns-infants-toddlers.html
@@ -62,8 +62,8 @@
       <div class="main-container container-fluid">
         <div class="row d-flex mx-auto center-content center-content-internal flex-column">
           <div class="heading-banner text-white">Healthy Lifestyle Toolkit</div>
-          <h6>Appropriate Language</h6>
-          <p>Instructions. Filler Language. Making small changes can seem like a daunting task for many families, but with the right support system it doesn’t have to be. </p>
+          <h6>Setting the stage for life</h6>
+          <p>Healthy habits begin at the earliest age. During their first few years of a child’s life is when parents should introduce the lifestyle behaviors children require for proper growth and development.</p>
           <!-- age group -->
           <div class="card mx-auto mb-3 mt-3 jh-card jh-card-age-group" style="border-color: #f8c506;">
             <div class="row no-gutters">
