--- a/preschool.html
+++ b/preschool.html
@@ -62,8 +62,8 @@
       <div class="main-container container-fluid">
         <div class="row d-flex mx-auto center-content center-content-internal flex-column">
           <div class="heading-banner text-white">Healthy Lifestyle Toolkit</div>
-          <h6>Appropriate Language</h6>
-          <p>Instructions. Filler Language. Making small changes can seem like a daunting task for many families, but with the right support system it doesn’t have to be. </p>
+          <h6>Establishing new routines and habits</h6>
+          <p>The preschool years are when children learn many of the everyday behaviors that can reduce their risk of weight issues as they age. These include getting daily exercise, eating scheduled meals and snacks, and following bedtime rituals</p>
           <!-- age group -->
           <div class="card mx-auto mb-3 mt-3 jh-card jh-card-age-group" style="border-color: #f8c506;">
             <div class="row no-gutters">
