--- a/early-childhood.html
+++ b/early-childhood.html
@@ -62,8 +62,8 @@
       <div class="main-container container-fluid">
         <div class="row d-flex mx-auto center-content center-content-internal flex-column">
           <div class="heading-banner text-white">Healthy Lifestyle Toolkit</div>
-          <h6>Appropriate Language</h6>
-          <p>Instructions. Filler Language. Making small changes can seem like a daunting task for many families, but with the right support system it doesn’t have to be. </p>
+          <h6>School and growth</h6>
+          <p>The early school years are when children establish many routines and habits that guide their healthy eating as they age, including making smart food choices, getting enough sleep, and adopting regular exercise</p>
           <!-- age group -->
           <div class="card mx-auto mb-3 mt-3 jh-card jh-card-age-group" style="border-color: #f8c506;">
             <div class="row no-gutters">
