--- a/pre-adolescence.html
+++ b/pre-adolescence.html
@@ -62,8 +62,8 @@
       <div class="main-container container-fluid">
         <div class="row d-flex mx-auto center-content center-content-internal flex-column">
           <div class="heading-banner text-white">Healthy Lifestyle Toolkit</div>
-          <h6>Appropriate Language</h6>
-          <p>Instructions. Filler Language. Making small changes can seem like a daunting task for many families, but with the right support system it doesn’t have to be. </p>
+          <h6>Going through changes</h6>
+          <p>The pre-adolescence years are when kids go through many physical and emotional changes. This period is when kids are often vulnerable to weight gain and obesity. Parents need to help their children get regular exercise and adequate sleep and ensure they continue to follow healthy eating habits.</p>
           <!-- age group -->
           <div class="card mx-auto mb-3 mt-3 jh-card jh-card-age-group" style="border-color: #f8c506;">
             <div class="row no-gutters">
