--- a/adolescence.html
+++ b/adolescence.html
@@ -62,8 +62,8 @@
       <div class="main-container container-fluid">
         <div class="row d-flex mx-auto center-content center-content-internal flex-column">
           <div class="heading-banner text-white">Healthy Lifestyle Toolkit</div>
-          <h6>Appropriate Language</h6>
-          <p>Instructions. Filler Language. Making small changes can seem like a daunting task for many families, but with the right support system it doesn’t have to be. </p>
+          <h6>Independence days</h6>
+          <p>Teenagers are more self-reliant. However, they still face many challenges that can raise their risk of weight gain as they eat more away from home and on their own. Parents need to help guide their kids to make good food choices and educate them on the importance of all-around health.</p>
           <!-- age group -->
           <div class="card mx-auto mb-3 mt-3 jh-card jh-card-age-group" style="border-color: #f8c506;">
             <div class="row no-gutters">
