--- a/adolescence.html
+++ b/adolescence.html
@@ -430,7 +430,7 @@
 
           <!-- age selection colored boxes -->
           <div class="row mx-auto age-selection-bottom">
-            <div class="col-lg mt-3 text-center d-flex align-items-center justify-content-center flex-column bg-yellow">
+            <div class="col-lg mt-3 mr-1 text-center d-flex align-items-center justify-content-center flex-column bg-yellow">
               <h3 class="font-weight-normal">Under</h3>
             <p class="mb-0">2</p>
             <a href="newborns-infants-toddlers.html"></a>
