--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div class="main-container container-fluid">
         <div class="row">
           <div class="col-md footer-logo-col">
-            <img class="footer-logo float-left" src="assets/imgs/footer-logo.png" />
+            <img class="footer-logo float-left" src="assets/imgs/footer-logo-white.svg" />
             <div>
               <p>501 6th Avenue South St. Petersburg, FL 33701</p>
               <p>P: 727-898-7451 Toll Free 800-456-4543</p>
