--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
           <p>The Toolkit is divided into five age categories and covers children from newborns through the teenage years. Each of the Four Pillars is highlighted within each age group and customized to meet the specific needs and goals for those aged children.</p>
           <div class="card mx-auto mb-3 mt-3 jh-card">
             <div class="row no-gutters">
+              <a class="card-links" href="newborns-infants-toddlers.html"></a>
               <div class="col-lg-3 jh-card-age bg-yellow d-flex">
                 <h3 class="font-weight-normal">Under</h3>
                 <p class="mb-0 h1">2</p>
