--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 
           <div class="card mx-auto mb-3 jh-card">
             <div class="row no-gutters">
+              <a class="card-links" href="preschool.html"></a>
               <div class="col-lg-3 jh-card-age bg-skyblue d-flex">
                 <p class="mb-0 h1">2-4</p>
               </div>
@@ -120,6 +121,7 @@
 
           <div class="card mx-auto mb-3 jh-card">
             <div class="row no-gutters">
+              <a class="card-links" href="early-childhood.html"></a>
               <div class="col-lg-3 jh-card-age bg-orange d-flex">
                 <p class="mb-0 h1">5-9</p>
               </div>
@@ -133,6 +135,7 @@
 
           <div class="card mx-auto mb-3 jh-card">
             <div class="row no-gutters">
+              <a class="card-links" href="pre-adolescence.html"></a>
               <div class="col-lg-3 jh-card-age bg-pink d-flex">
                 <p class="mb-0 h1">10-14</p>
               </div>
@@ -146,6 +149,7 @@
 
           <div class="card mx-auto mb-3 jh-card">
             <div class="row no-gutters">
+              <a class="card-links" href="adolescence.html"></a>
               <div class="col-lg-3 jh-card-age bg-green d-flex">
                 <p class="mb-0 h1">15-18</p>
               </div>
