--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="main-container container-fluid">
           <nav class="navbar navbar-light">
             <a class="navbar-brand" href="index.html"><img src="assets/imgs/ach-logo_1.webp" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
               <a href="index.html"><span class="navbar-toggler-icon"></span></a>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
