--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <nav class="navbar navbar-light">
             <a class="navbar-brand" href="index.html"><img src="assets/imgs/ach-logo_1.webp" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-              <a href="index.html"><span class="navbar-toggler-icon"></span></a>
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
