--- a/adolescence.html
+++ b/adolescence.html
@@ -21,13 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#">Pillars</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="assessments.html">Assessments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Tools</a>
                 </li>
               </ul>
             </div>
