--- a/tools.html
+++ b/tools.html
@@ -1,1 +1,147 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/sha4eea.css">
+    <script src="https://kit.fontawesome.com/99ac2dd297.js" crossorigin="anonymous"></script>
+    <title>John Hopkins</title>
+  </head>
+  <body>
+    <!-- header -->
+    <header>
+      <div class="main-container container-fluid">
+          <nav class="navbar navbar-light">
+            <a class="navbar-brand" href="index.html"><img src="assets/imgs/ach-logo_1.webp" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse">
+              <a href="index.html"><span class="navbar-toggler-icon"></span></a>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+      </div>
+      <div class="color-bar">
+        <ul>
+          <li class="orange"></li>
+          <li class="dark-pink"></li>
+          <li class="green"></li>
+          <li class="sky-blue"></li>
+          <li class="red"></li>
+          <li class="pink"></li>
+          <li class="yellow"></li>
+          <li class="sky-blue"></li>
+        </ul>
+      </div>
+    </header>
+    <!-- header end -->
+    <!-- hero -->
+    <div class="home-hero">
+      <img src="assets/imgs/home-hero.jpg" />
+      <div class="hero-bottom-container">
+        <div class="main-container container-fluid">
+          <a class="home-bc-link" href="index.html"><i class="fas fa-home"></i></a> <a href="index.html"><span>Healthy Lifestyle Homepage</span></a> <span>Assesments</span>
+        </div>
+      </div>
+    </div>
+    <!-- hero end -->
+    <!-- main content -->
+    <main class="middle-section">
 
+      <div class="main-container container-fluid">
+        <div class="row d-flex mx-auto center-content center-content-internal assessment-row flex-column">
+          <div class="heading-banner text-white">Assessments</div>
+            <h6 class="pt-2">Self-monitor</h6>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.SMT.pdf" target="_blank">View the Self-monitor Assesment</a>
+
+            <h6 class="pt-2">SMART Goals</h6>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.SMART.pdf" target="_blank">View the SMART Goals Assesment</a>
+
+            <h6 class="pt-2">Tips</h6>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.TIPS.pdf" target="_blank">View the Tips Assesment</a>
+
+            <h6 class="pt-2">Weight Bias</h6>
+            <a class="ml-4" href="assets/pdf/jhac.assessments.WB.pdf" target="_blank">View the Weight Bias Assesment</a>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 mt-5 pt-5 text-center mx-auto">
+            <h3 class="jh-title">Download the Healthy Lifestyle Toolkit</h3>
+            <div class="col-lg-6 mt-3 mx-auto">
+            <p>Language explaining the complete toolkit download. Filler language In today’s food environment it can often be easier to find unhealthy foods than healthy foods</p>
+            <p class="mt-4"><a class="btn pt-3 pb-3 pl-5 pr-5 jh-btn" href="assets/pdf/HealthyLifestyleToolkit.pdf" target="_blank">Download the PDF >></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- main content end -->
+    <!-- footer -->
+    <footer>
+      <div class="color-bar">
+        <ul>
+          <li class="orange"></li>
+          <li class="dark-pink"></li>
+          <li class="green"></li>
+          <li class="sky-blue"></li>
+          <li class="red"></li>
+          <li class="pink"></li>
+          <li class="yellow"></li>
+          <li class="sky-blue"></li>
+        </ul>
+      </div>
+      <div class="main-container container-fluid">
+        <div class="row">
+          <div class="col-md footer-logo-col">
+            <img class="footer-logo float-left" src="assets/imgs/footer-logo.png" />
+            <div>
+              <p>501 6th Avenue South St. Petersburg, FL 33701</p>
+              <p>P: 727-898-7451 Toll Free 800-456-4543</p>
+              <p>E: achinfo@jhmi.edu</p>
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-instagram-square"></i>
+              <i class="fab fa-linkedin"></i>
+              <i class="fab fa-pinterest-square"></i>
+              <i class="fab fa-twitter-square"></i>
+            </div>
+          </div>
+          <div class="col-md text-right text-white">
+            <p><a href="#">Make Appointment</a></p>
+            <p><a href="#">Refer a Patient</a></p>
+            <p><a href="#">Make a Gift</a></p>
+            <p><a href="#">Join Our Team</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="main-container container-fluid text-center">
+          &copy; <span id="footerDate"></span> John Hopkins All Childrens Hospital. All rights reserved.
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+   
+    <script>
+      let footerDate = document.getElementById('footerDate');
+      let d = new Date().getFullYear();
+      footerDate.innerText = d;
+    </script>
+  </body>
+</html>
