--- a/pre-adolescence.html
+++ b/pre-adolescence.html
@@ -30,7 +30,7 @@
                   <a class="nav-link" href="assessments.html">Assessments</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Tools</a>
+                  <a class="nav-link" href="tools.html">Tools</a>
                 </li>
               </ul>
             </div>
