--- a/tools.html
+++ b/tools.html
@@ -15,8 +15,8 @@
       <div class="main-container container-fluid">
           <nav class="navbar navbar-light">
             <a class="navbar-brand" href="index.html"><img src="assets/imgs/ach-logo_1.webp" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse">
-              <a href="index.html"><span class="navbar-toggler-icon"></span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
