--- a/assessments.html
+++ b/assessments.html
@@ -15,19 +15,22 @@
       <div class="main-container container-fluid">
           <nav class="navbar navbar-light">
             <a class="navbar-brand" href="index.html"><img src="assets/imgs/ach-logo_1.webp" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse">
-              <a href="index.html"><span class="navbar-toggler-icon"></span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#">Pillars</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="assessments.html">Assessments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="tools.html">Tools</a>
                 </li>
               </ul>
             </div>
