--- a/tools.html
+++ b/tools.html
@@ -55,7 +55,7 @@
 
       <div class="main-container container-fluid">
         <div class="row d-flex mx-auto center-content center-content-internal assessment-row flex-column">
-          <div class="heading-banner text-white">Assessments</div>
+          <div class="heading-banner text-white">Tools</div>
             <h6 class="pt-2">Self-monitor</h6>
             <a class="ml-4" href="assets/pdf/jhac.assessments.SMT.pdf" target="_blank">View the Self-monitor Assesment</a>
 
